Fix lang attribute, toast container, and move z-index to CSS

--- a/src/themes/huraga/assets/scss/huraga.scss
+++ b/src/themes/huraga/assets/scss/huraga.scss
@@ -160,4 +160,8 @@ body {
     }
 }
 
+.toast-container-zindex {
+    z-index: 1070;
+}
+
 // TODO: Add custom color themes to Huraga. Bootstrap has a great example here: https://getbootstrap.com/docs/5.3/customize/color-modes/#custom-color-modes
